[gd_scene load_steps=14 format=3 uid="uid://ctbkmmh82e20r"]

[ext_resource type="Script" uid="uid://fwqhpfmvd6om" path="res://scenes/language_npc.gd" id="1_40vkl"]
[ext_resource type="Texture2D" uid="uid://cgiiptkua7tam" path="res://assets/sprites/characters/soldier.png" id="1_iejvt"]
[ext_resource type="LabelSettings" uid="uid://bhlktkb5elsox" path="res://ui/hud_labels.tres" id="3_kc3pb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_40vkl"]
atlas = ExtResource("1_iejvt")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kc3pb"]
atlas = ExtResource("1_iejvt")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_s44rx"]
atlas = ExtResource("1_iejvt")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hir0y"]
atlas = ExtResource("1_iejvt")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_syo4m"]
atlas = ExtResource("1_iejvt")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yow6a"]
atlas = ExtResource("1_iejvt")
region = Rect2(500, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_0svxj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_40vkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kc3pb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s44rx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hir0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syo4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yow6a")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_40vkl"]
radius = 5.0
height = 12.0

[sub_resource type="LabelSettings" id="LabelSettings_40vkl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_40vkl"]
size = Vector2(13, 9)

[node name="LanguageNPC" type="CharacterBody2D"]
script = ExtResource("1_40vkl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_0svxj")
autoplay = "default"
frame_progress = 0.18391952

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_40vkl")

[node name="Label" type="Label" parent="."]
offset_left = -8.0
offset_top = -35.0
offset_right = 32.0
offset_bottom = -12.0
text = "ðŸ‡ºðŸ‡¸"
label_settings = SubResource("LabelSettings_40vkl")

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2(-0.5, 4.5)
shape = SubResource("RectangleShape2D_40vkl")

[node name="LanguageChangedLabel" type="Label" parent="."]
visible = false
z_index = 2
offset_left = -89.0
offset_top = 8.0
offset_right = 103.0
offset_bottom = 31.0
text = "LANGUAGE_CHANGED_MESSAGE"
label_settings = ExtResource("3_kc3pb")
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
